tests/multi_file/passing/P1_private_same_namespace/main.mlang
include "auth/session.mlang";

fn main ||->() {
    let value auth::expose_secret();
    println(i32_to_string(value));
};
