tests/multi_file/failing/P4_private_use_error/main.mlang
include "module.mlang";
use auth::secret;

fn main ||->() {
    println(secret);
};
